--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630086.md#1" title="美国38州对谷歌提反垄断诉讼""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/08/GettyImages-1154955595-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630222.md#1" title="美商务部将中芯国际等数十中企列入黑名单""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/07c1449a62e5d3c0aa4d54a1619c034a-600x400-1-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://jfmcky3552.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631514.md#1">电商创始人公开质证希拉里接受外国政府1800万</a><br>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631538.md#1">染疫住院数首降 州府批准Moderna疫苗</a><br>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631531.md#1">白思豪称NYPD应反省打击BLM 引警察工会不满</a><br>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631524.md#1">抗议中共渗透美国 纽约人中领馆怒撕血旗</a><br>
-:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631520.md#1">特殊高中1/21前报考 纽约市议员参选人王能举办“法拉盛教育日”</a><br>
-:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631536.md#1">户外用餐不能入内使用厕所？纽约州府周五开绿灯</a><br>
+:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631668.md#1">?美联储维持近零利率 上修2021年经济增长预测</a><br>
+:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631634.md#1">疫情加速业务重组 可口可乐全球裁员2200人</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631514.md#1">电商创始人公开质证希拉里接受外国政府1800万</a><br>
+:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631538.md#1">染疫住院数首降 州府批准Moderna疫苗</a><br>
+:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631531.md#1">白思豪称NYPD应反省打击BLM 引警察工会不满</a><br>
+:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631524.md#1">抗议中共渗透美国 纽约人中领馆怒撕血旗</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12627138.md#1">川普宣布延长紧急状态 以应对国家安全威胁</a><br>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629245.md#1">【翻墙必看】首席大法官罗伯茨被曝丑闻</a><br>
