--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/jfmcky3552/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/jfmcky3552/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631460.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/12/000_8WZ7KL-320x200.jpg"><p align="center">川普签署外企问责法 中企不合规就下市</p></a>
-<a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631460.md#1" title="川普签署外企问责法 中企不合规就下市""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/000_8WZ7KL-320x200.jpg">&nbsp;</a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631460.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1228242604-320x200.jpg"><p align="center">川普签署外企问责法 中企不合规就下市</p></a>
+<a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631460.md#1" title="川普签署外企问责法 中企不合规就下市""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1228242604-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631308.md#1" title="川普团队顾问：料在宾州采取更多法律行动""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/epstein-700x420-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12631090.md#1" title="美能源部禁关键电力公司购买中企设备""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/Dan-Brouillette-1200x835-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630991.md#1" title="反制中共侵犯人权 蓬佩奥：制裁59中国实体""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1209520023-1-320x200.jpg">&nbsp;</a>
@@ -13,23 +13,23 @@
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630086.md#1" title="美国38州对谷歌提反垄断诉讼""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/08/GettyImages-1154955595-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630222.md#1" title="美商务部将中芯国际等数十中企列入黑名单""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/07c1449a62e5d3c0aa4d54a1619c034a-600x400-1-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://jfmcky3552.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631668.md#1">?美联储维持近零利率 上修2021年经济增长预测</a><br>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631634.md#1">疫情加速业务重组 可口可乐全球裁员2200人</a><br>
-:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631514.md#1">电商创始人公开质证希拉里接受外国政府1800万</a><br>
-:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631538.md#1">染疫住院数首降 州府批准Moderna疫苗</a><br>
-:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631531.md#1">白思豪称NYPD应反省打击BLM 引警察工会不满</a><br>
-:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631524.md#1">抗议中共渗透美国 纽约人中领馆怒撕血旗</a><br>
+:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631440.md#1">听FBI简报 麦卡锡：私通共谍议员不该留情委会</a><br>
+:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631672.md#1">未向客户披露赚钱方式 Robinhood遭罚6500万</a><br>
+:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631668.md#1">?美联储维持近零利率 上修2021年经济增长预测</a><br>
+:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631634.md#1">疫情加速业务重组 可口可乐全球裁员2200人</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631514.md#1">电商创始人公开质证希拉里接受外国政府1800万</a><br>
+:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631538.md#1">染疫住院数首降 州府批准Moderna疫苗</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12627138.md#1">川普宣布延长紧急状态 以应对国家安全威胁</a><br>
-<a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629245.md#1">【翻墙必看】首席大法官罗伯茨被曝丑闻</a><br>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630478.md#1">代理防长暂停与拜登团队过渡？国防部回应</a><br>
+<a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629245.md#1">【翻墙必看】首席大法官罗伯茨被曝丑闻</a><br>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12628632.md#1">中共称接回7万人 网友打脸：天价机票回国难</a><br>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12626544.md#1">【翻墙必看】大陆多省市强制限电停工</a><br>
-<a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12626403.md#1">大陆宣布明年将进口至少1亿支德国疫苗</a><br>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12626970.md#1">北大学者：大陆失业人口已达一亿</a><br>
-<a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12626630.md#1">马云任校长的湖畔大学 其云南分校招标被终止</a><br>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12628055.md#1">内蒙老巢被整肃 刘云山突随习足迹访潮汕</a><br>
+<a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12626630.md#1">马云任校长的湖畔大学 其云南分校招标被终止</a><br>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12626988.md#1">山西13岁女孩遭校长逼迫写性行为检讨书</a><br>
+<a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12626460.md#1">中共吹捧“张謇精神” 学者：对民企割韭菜</a><br>
 <br><p align="center"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630219.md#1">【名家专栏】疫情下 成本与效益之权衡</a><br>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12628549.md#1">【新闻看点】国会阻击战胜算？川普最后抉择</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 369,587,857 人
+!共 369,588,610 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -107,7 +107,7 @@
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/11/n12614166.md#1">【有冇搞错】三领域大目标 美灭共政策难逆转</a><br>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/10/14/n12476082.md#1">【思想领袖】导弹专家：中共目标取代美国</a><br>
 <br><p align="center"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630357.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630357.md#1">被查的哈尔滨前司法局长向生元还有哪些恶行</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629625.md#1">维权律师张展绝食抗议命危 当局仍欲强行开庭</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629448.md#1">甘肃访民到京上访 遭警察无故扣押身份证</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629367.md#1">重庆男子被非法团伙炸瞎右眼 要求国家赔偿</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629184.md#1">阿里巴巴等中企开发人脸辨识软件 监控维族</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12628563.md#1">遭言论打压 前纽约时报摄影记者杜斌被刑拘</a><br><br><p align="center"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631318.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/04/e20ff4446ac777972475a53e2ffeed7b-320x200.jpg"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631318.md#1">运费升 汇率涨 外加限电 大陆企业苦挣扎</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629689.md#1">太缺芯了 大陆28纳米以下芯片企业免税十年</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629680.md#1">蚂蚁集团网络存款产品全下架 传多家平台跟风</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629694.md#1">铁矿石价格飙涨 中共对澳贸易战会否放软？</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629323.md#1">新兴市场2021年前景调查 中国垫底</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12628810.md#1">美征收关税引发中国家电企业迁移越南获利</a><br><br><p align="center"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630705.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2018/06/b72ee49febef6a381d2d964412fef3ff-320x200.jpg"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630705.md#1">中共缺席美中安全会 美：不履行协议又一例证</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630509.md#1">报告：中共在瑞士搞统战 绵密程度超乎想像</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629551.md#1">检测报告不得现武汉肺炎 学者揭中共真实目的</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12628994.md#1">蔡英文声援黎智英 批港共对民主自由戕害</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629558.md#1">台湾防疫优及勇敢抗共 列经济学人年度国家</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629324.md#1">受贿数千万 甘肃敦煌前书记詹顺舟获刑14年</a><br><br><p align="center"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630984.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/shutterstock2_1716346753-320x200.jpg"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630984.md#1">中国被曝年前给五千万人打疫苗 疫苗合格吗？</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629885.md#1">成都再添中风险区 密接者经三次检测才确诊</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629684.md#1">大陆疫苗备受质疑 中共官员表态引议论</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629376.md#1">大陆12月发生12起高校生自杀案 舆论反响大</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12627159.md#1">陆疾控专家揭政府鼓励掩盖 皮毛带病毒禁报告</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12626116.md#1">数百接种过外派劳工染疫 专家详解大陆疫苗风险</a><br><br><p align="center"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631360.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2015/11/1511060832032544-320x200.jpg"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631360.md#1">碳火锅店无通风似“毒气室” 东北12客中毒</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631492.md#1">三退声明精选（2020/12/18）</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629095.md#1">中国留学生死亡后竟持续交作业 教授们吓坏</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629321.md#1">云南官员强奸4岁幼女获减刑2年 引争议</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629016.md#1">三退声明精选（2020/12/17）</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12627195.md#1">天津杨松发蒙冤19年无罪释放 网民怒斥当局</a><br><br><p align="center"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/9/n12607628.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230031559-320x200.jpg"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/9/n12607628.md#1">蓬佩奥：中共收买美大学 华裔教授在华被拘</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/9/n12607515.md#1">中共列演员四宗罪 传刘亦菲带编剧开工犯忌</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/8/n12603439.md#1">坐女童身上看手机 广东一幼儿园老师被拘留</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/8/n12602837.md#1">蓬佩奥周三赴乔州 发表中共威胁重磅演讲</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/4/n12596993.md#1">袜子里藏生物样本回国 中国学者在美认罪</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/4/n12596580.md#1">中共推贫困大学生上山下乡 权贵子弟欧美发展</a><br><br><p align="center"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630357.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630357.md#1">被查的哈尔滨前司法局长向生元还有哪些恶行</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629625.md#1">维权律师张展绝食抗议命危 当局仍欲强行开庭</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629448.md#1">甘肃访民到京上访 遭警察无故扣押身份证</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629367.md#1">重庆男子被非法团伙炸瞎右眼 要求国家赔偿</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629184.md#1">阿里巴巴等中企开发人脸辨识软件 监控维族</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12628563.md#1">遭言论打压 前纽约时报摄影记者杜斌被刑拘</a><br><br><p align="center"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631318.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/04/e20ff4446ac777972475a53e2ffeed7b-320x200.jpg"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631318.md#1">运费升 汇率涨 外加限电 大陆企业苦挣扎</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629689.md#1">太缺芯了 大陆28纳米以下芯片企业免税十年</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629680.md#1">蚂蚁集团网络存款产品全下架 传多家平台跟风</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629694.md#1">铁矿石价格飙涨 中共对澳贸易战会否放软？</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629323.md#1">新兴市场2021年前景调查 中国垫底</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12628810.md#1">美征收关税引发中国家电企业迁移越南获利</a><br><br><p align="center"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631440.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/12/Screen-Shot-2020-12-09-at-14.42.07-600x400-1-320x200.png"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631440.md#1">听FBI简报 麦卡锡：私通共谍议员不该留情委会</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630705.md#1">中共缺席美中安全会 美：不履行协议又一例证</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630509.md#1">报告：中共在瑞士搞统战 绵密程度超乎想像</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629551.md#1">检测报告不得现武汉肺炎 学者揭中共真实目的</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12628994.md#1">蔡英文声援黎智英 批港共对民主自由戕害</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629558.md#1">台湾防疫优及勇敢抗共 列经济学人年度国家</a><br><br><p align="center"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630984.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/shutterstock2_1716346753-320x200.jpg"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630984.md#1">中国被曝年前给五千万人打疫苗 疫苗合格吗？</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629885.md#1">成都再添中风险区 密接者经三次检测才确诊</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629684.md#1">大陆疫苗备受质疑 中共官员表态引议论</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629376.md#1">大陆12月发生12起高校生自杀案 舆论反响大</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12627159.md#1">陆疾控专家揭政府鼓励掩盖 皮毛带病毒禁报告</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12626403.md#1">大陆宣布明年将进口至少1亿支德国疫苗</a><br><br><p align="center"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631360.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2015/11/1511060832032544-320x200.jpg"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631360.md#1">碳火锅店无通风似“毒气室” 东北12客中毒</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631492.md#1">三退声明精选（2020/12/18）</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629095.md#1">中国留学生死亡后竟持续交作业 教授们吓坏</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629321.md#1">云南官员强奸4岁幼女获减刑2年 引争议</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629016.md#1">三退声明精选（2020/12/17）</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12627195.md#1">天津杨松发蒙冤19年无罪释放 网民怒斥当局</a><br><br><p align="center"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/9/n12607628.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230031559-320x200.jpg"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/9/n12607628.md#1">蓬佩奥：中共收买美大学 华裔教授在华被拘</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/9/n12607515.md#1">中共列演员四宗罪 传刘亦菲带编剧开工犯忌</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/8/n12603439.md#1">坐女童身上看手机 广东一幼儿园老师被拘留</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/8/n12602837.md#1">蓬佩奥周三赴乔州 发表中共威胁重磅演讲</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/4/n12596993.md#1">袜子里藏生物样本回国 中国学者在美认罪</a><br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/4/n12596580.md#1">中共推贫困大学生上山下乡 权贵子弟欧美发展</a><br><br><p align="center"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/11/29/n12582766.md#1">【真相核查】拜登得票异常 主流媒体掩盖</a><br>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/11/28/n12581318.md#1">【重磅】前情报官作证：Dominion操纵大选</a><br>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/11/27/n12579842.md#1">【内幕】中共透过文化交流向世界散播谎言</a><br>
